# fast_zero

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  models.py  security.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/versions/: a3ba9f3c1c15_add_update_field.py  b508ff6bbe65_create_todos_table.py  f612c32436f9_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_todos.py  test_users.py
